--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -11,20 +11,24 @@ apps:
   azcopy:
     command: azcopy
   git:
-    command: git
+    command: bin/git
+    plugs:
+      - network
 
 parts:
   ms-azcopy:
     source: https://aka.ms/downloadazcopylinux64
     plugin: dump
     source-type: tar
-    override-build: |
-      snapcraftctl build      
-      sudo sed -i 's|/usr/bin|$SNAP/usr/bin|g' $SNAPCRAFT_PART_INSTALL/install.sh
+#    override-build: |
+#      snapcraftctl build      
+#      sudo sed -i 's|/usr/bin|$SNAP/usr/bin|g' $SNAPCRAFT_PART_INSTALL/install.sh
   scm-git:
-    source: https://mirrors.edge.kernel.org/pub/software/scm/git/git-2.7.4.tar.gz
+    source: https://github.com/git/git.git
+#    source: https://mirrors.edge.kernel.org/pub/software/scm/git/git-2.7.4.tar.gz
     plugin: autotools
-    source-type: tar
-    build-packages: [dh-autoreconf, libcurl4-gnutls-dev, libexpat1-dev,
-gettext, libz-dev, libssl-dev, asciidoc, xmlto, docbook2x]
-    configflags: ["--prefix=/usr"]
+    source-type: git
+    source-tag: v2.17.1
+#    build-packages: [dh-autoreconf, libcurl4-gnutls-dev, libexpat1-dev,
+#gettext, libz-dev, libssl-dev, asciidoc, xmlto, docbook2x]
+#    configflags: ["--prefix=/usr"]
